--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -8,19 +8,36 @@
     <meta name="author" content="">
 
     <title>Hello Wigs!</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
   <body>
-    <div class="container">
-      <header class="header">
+    <div class="container-fuild">
+      <header class="header clearfix">
+        <div class="app-title">
+          <h1><a href="/">ML</a></h1>
+        </div>
         <nav role="navigation">
           <ul class="nav nav-pills pull-right">
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
+            <li><a href="http://www.phoenixframework.org/docs">About</a></li>
+            <li><a href="#">Posts</a></li>
           </ul>
         </nav>
         <span class="logo"></span>
       </header>
+
+      <div class="banner">
+
+        <div class="banner-callout">
+          <h2>Matt Ludwigs</h2>
+          <p>- software engineer -</p>
+          <p>λ</p>
+        </div>
+
+      </div>
 
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
@@ -28,6 +45,10 @@
       <main role="main">
         <%= render @view_module, @view_template, assigns %>
       </main>
+
+      <footer>
+        
+      </footer>
 
     </div> <!-- /container -->
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
