--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,36 +1,34 @@
-<div class="jumbotron">
-  <h2><%= gettext "Welcome to %{name}", name: "Phoenix!" %></h2>
-  <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p>
-</div>
+<section class="container">
 
-<div class="row marketing">
-  <div class="col-lg-6">
-    <h4>Resources</h4>
-    <ul>
-      <li>
-        <a href="http://phoenixframework.org/docs/overview">Guides</a>
-      </li>
-      <li>
-        <a href="http://hexdocs.pm/phoenix">Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-    </ul>
-  </div>
+  <h2 class="section-heading">Recent Posts</h2>
 
-  <div class="col-lg-6">
-    <h4>Help</h4>
-    <ul>
-      <li>
-        <a href="http://groups.google.com/group/phoenix-talk">Mailing list</a>
-      </li>
-      <li>
-        <a href="http://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">@elixirphoenix</a>
-      </li>
-    </ul>
-  </div>
-</div>
+  <article class="card-shadow recent-post">
+    <div class="card-title">
+      <h2>Hello</h2>
+    </div>
+    <div class="card">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores aperiam sequi earum libero. Expedita nihil, facilis maiores voluptatum dignissimos provident nemo minima deleniti molestiae quibusdam quae iusto repudiandae odit labore.</p>
+
+      <div class="link right-link clearfix">
+        <a href="#">Read More</a>
+      </div>
+    </div>
+  </article>
+
+  
+  <article class="card-shadow recent-post">
+    <div class="card-title">
+      <h2>Hello</h2>
+    </div>
+    <div class="card">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores aperiam sequi earum libero. Expedita nihil, facilis maiores voluptatum dignissimos provident nemo minima deleniti molestiae quibusdam quae iusto repudiandae odit labore.</p>
+
+      <div class="link right-link clearfix">
+        <a href="#">Read More</a>
+      </div>
+    </div>
+  </article>
+
+
+
+</section>
