playing around with some content

--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello Wigs!</title>
+    <title>Matt Ludwigs λ</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100' rel='stylesheet' type='text/css'>
@@ -18,7 +18,7 @@
     <div class="container-fuild">
       <header class="header clearfix">
         <div class="app-title">
-          <h1><a href="/">ML</a></h1>
+          <h1><a href="/">Matt Ludwigs</a></h1>
         </div>
         <nav role="navigation">
           <ul class="nav nav-pills pull-right">
@@ -32,8 +32,8 @@
       <div class="banner">
 
         <div class="banner-callout">
-          <h2>Matt Ludwigs</h2>
-          <p>- software engineer -</p>
+          <h2>- Software Engineer -</h2>
+          <p> Elixir | JavaScript | Elm</p>
           <p>λ</p>
         </div>
 
